step one in saving a visitor. at this point the visitor is not saving to the system.

--- a/src/app/components/visitor-add-edit/visitor-add-edit.component.css
+++ b/src/app/components/visitor-add-edit/visitor-add-edit.component.css
@@ -57,3 +57,12 @@
 .date {
     font-style: italic;
 }
+
+.dynamic_row {
+    padding-left: 23px;
+    padding-right: 23px;
+}
+
+.hide {
+    display: none;
+}
