added error message at top to indicate to user that there are fields to complete before submission

--- a/src/app/components/visitor-add-edit/visitor-add-edit.component.html
+++ b/src/app/components/visitor-add-edit/visitor-add-edit.component.html
@@ -2,8 +2,8 @@
     <h2>{{title}}</h2>
     <hr/>
     <div class="form-container">
-        <div class="alert alert-danger">
-            <p class="text-danger" *ngIf="invalid">Errors exist in form. Please review before saving.</p>
+        <div class="alert alert-danger" *ngIf="invalid">
+            <p class="text-danger">Please complete required fields before trying to save.</p>
         </div>
         <form [formGroup]="visitorForm">
             <div class="row">
