started the tree component to view all visitors based on the starting value. got the components to communicate.

--- a/src/app/components/visitors/visitors.component.html
+++ b/src/app/components/visitors/visitors.component.html
@@ -20,46 +20,7 @@
                 </div>
                 <div class="panel-body">
                     <!-- TREEVIEW CODE -->
-                    <div class="treeview">
-                        <ul>
-                            <li><a href="#">Tree</a>
-                                <ul>
-                                    <li><a href="#">Branch</a></li>
-                                    <li><a href="#">Branch</a>
-                                        <ul>
-                                            <li><a href="#">Stick</a></li>
-                                            <li><a href="#">Stick</a></li>
-                                            <li><a href="#">Stick</a>
-                                                <ul>
-                                                    <li><a href="#">Twig</a></li>
-                                                    <li><a href="#">Twig</a></li>
-                                                    <li><a href="#">Twig</a></li>
-                                                    <li><a href="#">Twig</a>
-                                                        <ul>
-                                                            <li><a href="#">Leaf</a></li>
-                                                            <li><a href="#">Leaf</a></li>
-                                                            <li><a href="#">Leaf</a></li>
-                                                            <li><a href="#">Leaf</a></li>
-                                                            <li><a href="#">Leaf</a></li>
-                                                            <li><a href="#">Leaf</a></li>
-                                                            <li><a href="#">Leaf</a></li>
-                                                            <li><a href="#">Leaf</a></li>
-                                                            <li><a href="#">Leaf</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <li><a href="#">Twig</a></li>
-                                                    <li><a href="#">Twig</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">Stick</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Branch</a></li>
-                                    <li><a href="#">Branch</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
+                    <app-tree-view [parents]="parents" (notify)="loadChildren($event)"></app-tree-view>
                     <!-- TREEVIEW CODE -->
                 </div>
             </div>
