toggle children element of every parent in the tree

--- a/src/app/components/tree/tree.component.css
+++ b/src/app/components/tree/tree.component.css
@@ -1,6 +1,6 @@
 div.treeview {
     min-width: 100px;
-    height: 500px;
+    height: 100%;
     overflow: auto;
     padding: 4px;
     margin-bottom: 20px;
