--- a/src/app/components/tree/tree.component.html
+++ b/src/app/components/tree/tree.component.html
@@ -1,21 +1,17 @@
 <div class="treeview">
-    <ul>
-        <li *ngFor="let node of parents" class="tree-branch">
-            <a (click)="toggleItem(node.title, $event)">
-                <i class='tree-indicator glyphicon glyphicon-chevron-right'></i>
-                <span class="heading">
-                    {{node.title}}
-                </span>
+    <ul id="treeview-tree">
+        <li *ngFor="let node of parents" class="tree-branch" (click)="toggleItem(node.title, $event)">
+            <i class='tree-indicator glyphicon glyphicon-chevron-right'></i>
+            <a>
+                {{node.title}}
             </a>
             <ul *ngIf="node.children?.length === 0">
                 <li>No Content Availiable</li>
             </ul>
             <ul *ngFor="let child of node.children">
-                <li>
-                    <a>
-                        <span class="heading">
-                            {{node.title}}
-                        </span>
+                <li (click)="toggleItem(node.title, $event)">
+                    <a class="tree-branch tree-indicator">
+                        {{node.title}}
                     </a>
                 </li>
             </ul>
