--- a/src/app/components/visitor-add-edit/visitor-add-edit.component.html
+++ b/src/app/components/visitor-add-edit/visitor-add-edit.component.html
@@ -119,6 +119,8 @@
                 <input type="email" class="form-control" formControlName="email">
             </div>
             <!-- email address end -->
+            <div *ngIf="formErrors.contacts" class="small text-danger formErrors " [innerHTML]="formErrors.contacts">
+            </div>
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <div class="row">
